release 1.0.3 (2009-03/04)
- Fixed issue 251
  https://jersey.dev.java.net/issues/show_bug.cgi?id=251
  The set of methods on the Allow header is accessible using
  ClientResponse.getAllow.
- Fixed issue 230
  https://jersey.dev.java.net/issues/show_bug.cgi?id=230
  No-interface view session beans deployed in the war may also be resource
  and provided classes. Injection of Jersey/JAX-RS artifacts on to fields and
  setters will work correctly.
- Fixed issue 239
  https://jersey.dev.java.net/issues/show_bug.cgi?id=239
  @Path("/") annotated resource methods are equivalent to if the @Path is not
  present.
- Support for EJB 3.1 no-interface view beans as resource or provider class
  instances deployed into the war.
  This requires Glassfish V3 build 43, from the 30th of March, or greater.
- Fixed issue 246
  https://jersey.dev.java.net/issues/show_bug.cgi?id=246
  Imran M Yousuf contributed support for file attachments for the jersey-multipart
  module.
  See the class
    com.sun.jersey.multipart.file.FileDataBodyPart
- Fixed issue 225
  https://jersey.dev.java.net/issues/show_bug.cgi?id=225
  Niall Gallagher contributed support for the Simple HTTP server
  integration with Jersey. See the JavaDoc for the following in the
  jersey-simple-server module:
    com.sun.jersey.simple.container.SimpleServerFactory
- Fixed issue 122
  https://jersey.dev.java.net/issues/show_bug.cgi?id=122
  When the ServletContainer is used as a filter then the init-param
  property "com.sun.jersey.config.property.WebPageContentRegex" may
  used to declare a regex to match against the request path. If the
  path matches then the requets is forwarded to the next filter (if any)
  in the filter chain and Jersey will not process the request.
  For example if you set the value to "/(image|css)/.*" then you can serve up
  images and CSS files for your Implicit or Explicit Views while still
  processing your JAX-RS resources.
- Added the annotation com.sun.jersey.multipart.FormDataParam for